Update CSS fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   font-family: Overpass, sans-serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
@@ -14,41 +15,50 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(#ff9500, #ff5e3a);
 }
 
-h1 {
-  text-align: center;
+h2 {
+  justify-self: center;
+  font-size: 2rem;
   color: #fff;
-  padding: 6vmin;
+  grid-area: heading;
+  margin: 0;
+}
+
+h3 {
+  font-size: 1.5rem;
+  margin: 0 0 1.5rem;
 }
 
 div {
   color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 section {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  justify-content: center;
+  grid-template-areas: "heading" "cal1" "cal2" "cal3";
   margin: 0;
-  align-items: center;
   padding: 6vmin;
+  gap: 6vmin;
+  background-image: linear-gradient(#ff9500, #ff5e3a);
+  background-color: #ff9500;
 }
 
 p {
-  color: rgba(255, 255, 255, .7);
-  font-weight: normal;
+  margin: 0 0 auto;
 }
 
 a {
-  display: flex;
-  color: rgba(255, 255, 255, .7);
-  list-style-type: none;
-  width: 300px;
+  font-size: 1.125rem;
+  color: #fff;
+  text-decoration: none;
   border: .2rem solid rgba(255, 255, 255, .7);
+  margin-top: 1.5rem;
   padding: 1rem;
-  margin: 1.5rem;
 }
 
 a:hover,
@@ -62,6 +72,7 @@ a:focus {
   width: 8em;
   display: flex;
   color: #fff;
+  margin: 0 0 1.5rem;
 }
 
 .icon svg {
@@ -71,4 +82,14 @@ a:focus {
   top: 0;
   position: absolute;
   fill: currentColor;
+}
+
+@media only screen and (min-width: 38em) {
+
+  section {
+    grid-template-areas:
+      "heading heading heading"
+      "cal1 cal2 cal3";
+  }
+
 }
